Fix styles for rounding corners of popups on ios

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -31,10 +31,11 @@
 }
 
 /* iOS: Round popup corners */
-@media (min-height: 630px) and (min-width: 630px)
-.ios .popup:not(.popup-tablet-fullscreen) {
-  border-radius: .25rem;
-  overflow: hidden;
+@media (min-height: 630px) and (min-width: 630px) {
+  .ios .popup:not(.popup-tablet-fullscreen) {
+    border-radius: .25rem;
+    overflow: hidden;
+  }
 }
 
 /* Give 'back' links in popups some room */
